ifixes #219 - create scripts to help with running and testing multiple instances